all: pedigree script for each sub project
Add pedigree script generation at install time for each sub project.

config.h is generated when configure script is called, which might not
always be the case--especially for minor code change case in active
development branch. Hence, the script which is  generated/updated
every time 'make install' is called is preferred.

Change-Id: I52e8e0a749d8608ef825b35b8f6bd91609ff9c2f

--- a/ldms/Makefile.am
+++ b/ldms/Makefile.am
@@ -42,14 +42,7 @@ install-data-local: doxygen
 	done
 endif
 
-install-exec-local:
-	COMMIT=`git rev-parse HEAD`; \
-	DIRTY=`git status -uno -s | wc -l`; \
-	if [[ $$DIRTY != 0 ]]; then \
-		COMMIT="$$COMMIT-dirty" ; \
-	fi ; \
-	echo '#!/bin/bash' > $(DESTDIR)/$(bindir)/ldms-commit-id ; \
-	echo echo $$COMMIT >> $(DESTDIR)/$(bindir)/ldms-commit-id ; \
-	chmod 555 $(DESTDIR)/$(bindir)/ldms-commit-id ;
+PEDIGREE = $(DESTDIR)/$(bindir)/ldms-pedigree
+include $(top_srcdir)/../automake/pedigree.am
 
 clean-local: rpm-clean
