--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -45,14 +45,7 @@ install-data-local: doxygen
 	done
 endif
 
-install-exec-local:
-	COMMIT=`git rev-parse HEAD`; \
-	DIRTY=`git status -uno -s | wc -l`; \
-	if [[ $$DIRTY != 0 ]]; then \
-		COMMIT="$$COMMIT-dirty" ; \
-	fi ; \
-	echo '#!/bin/bash' > $(DESTDIR)/$(bindir)/lib-commit-id ; \
-	echo echo $$COMMIT >> $(DESTDIR)/$(bindir)/lib-commit-id ; \
-	chmod 555 $(DESTDIR)/$(bindir)/lib-commit-id ;
+PEDIGREE = $(DESTDIR)/$(bindir)/lib-pedigree
+include $(top_srcdir)/../automake/pedigree.am
 
 clean-local: rpm-clean
