--- a/me/Makefile.am
+++ b/me/Makefile.am
@@ -17,14 +17,7 @@ rpm-clean:
 	rm -rf rpm/
 	rm -f $(ME_TARBALL)
 
-install-exec-local:
-	COMMIT=`git rev-parse HEAD`; \
-	DIRTY=`git status -uno -s | wc -l`; \
-	if [[ $$DIRTY != 0 ]]; then \
-		COMMIT="$$COMMIT-dirty" ; \
-	fi ; \
-	echo '#!/bin/bash' > $(DESTDIR)/$(bindir)/me-commit-id ; \
-	echo echo $$COMMIT >> $(DESTDIR)/$(bindir)/me-commit-id ; \
-	chmod 555 $(DESTDIR)/$(bindir)/me-commit-id ;
+PEDIGREE = $(DESTDIR)/$(bindir)/me-pedigree
+include $(top_srcdir)/../automake/pedigree.am
 
 clean-local: rpm-clean
