--- a/komondor/etc/init.d/komondor.in
+++ b/komondor/etc/init.d/komondor.in
@@ -70,8 +70,8 @@ pidfile=$OVIS_HOME/var/pid/$prog.pid
 mkdir -p $(dirname $lockfile)
 mkdir -p $(dirname $pidfile)
 mkdir -p $OVIS_HOME/var/sock/
-mkdir -p $OVIS_HOME/var/log/
-LOG=$OVIS_HOME/var/log/komondor.log
+mkdir -p $OVIS_LOG/
+LOG=$OVIS_LOG/komondor.log
 
 status -p $pidfile -l $(basename $lockfile) master >/dev/null 2>&1
 running=$?
