ldms: ldms-metric-store-verify script
Change-Id: Ia9d4e1912617d9ecce5a71646e256aee596d479f

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -238,6 +238,7 @@ AC_CONFIG_FILES([Makefile src/Makefile src/core/Makefile src/xprt/Makefile
 		 src/sampler/hadoop/Makefile
 		 src/ldmsd/Makefile
 		 etc/Makefile
+		 scripts/Makefile
 		 packaging/ovis-ldms.spec
 		 Doxyfile
 		 ldms.spec])
