ocm: make reconnect interval set from environment variable
Change-Id: I10533a57940156896c70a399b5397f41abfd8bb9

--- a/lib/etc/ovis/set-ovis-variables.sh.in
+++ b/lib/etc/ovis/set-ovis-variables.sh.in
@@ -24,6 +24,7 @@ export LDMSD_SAMPLER_PORT_LISTEN=10001
 export OCMD_XPORT=sock
 export OCMD_PORT=12345
 export OCMD_PEER_LIST=$OVIS_HOME/etc/ocmd_peer_list
+export OCMD_RECONNECT_INTERVAL=20.00
 
 export ME_XPORT=sock
 export ME_PORT_TO_OCMD=20003
