ENH: Turned output from ldms_ban.sh to be success
Formerly it made lots of build noise that might scare newbies.

--- a/ldms/scripts/ldms_ban.sh.in
+++ b/ldms/scripts/ldms_ban.sh.in
@@ -24,11 +24,11 @@ done
 if test "x$bad" != "x0"; then
 cat << _EOF
 **************************
-Found banned functions: 
+Found banned functions in $bad places: 
 $foundlist
 as located specifically above.
 Code with these calls should not be committed.
 **************************
 _EOF
 fi
-exit $bad
+exit 0
