--- a/komondor/etc/Makefile.am
+++ b/komondor/etc/Makefile.am
@@ -1,3 +1,8 @@
-install-data-local:
-	$(MKDIR_P) $(DESTDIR)/etc/init.d
-	$(INSTALL_SCRIPT) $(builddir)/init.d/komondor $(DESTDIR)/etc/init.d/
+ACLOCAL_AMFLAGS = -I m4
+SUBDIRS =
+
+# init script
+SUBDIRS += init.d
+
+# logrotate
+SUBDIRS += logrotate.d
