--- a/ldms/etc/Makefile.am
+++ b/ldms/etc/Makefile.am
@@ -1,5 +1,8 @@
+ACLOCAL_AMFLAGS = -I m4
+SUBDIRS =
 
-install-data-local:
-	$(MKDIR_P) $(DESTDIR)/etc/init.d/
-	$(INSTALL_SCRIPT) $(builddir)/init.d/ldmsd_aggregator $(DESTDIR)/etc/init.d/
-	$(INSTALL_SCRIPT) $(builddir)/init.d/ldmsd_sampler $(DESTDIR)/etc/init.d/
+# init script
+SUBDIRS += init.d
+
+# logrotate
+SUBDIRS += logrotate.d
