sos: bpt_verify() update, sos_verify and sos_restore
This changeset does the following:

 - Update bpt_verify() so that it won't assert-fail. In sos
   verefication process, bpt_verify should return error instead of
   assert-fail.

 - Update sos_verify so that it does only verification.

 - Add sos_restore command for index restoration.

Change-Id: I0cb352da3eae5ca040f1406853d1a445d322c7f0

--- a/sos/src/Makefile.am
+++ b/sos/src/Makefile.am
@@ -3,6 +3,7 @@ INCLUDES = @OVIS_LIB_INCDIR_FLAG@
 sbin_PROGRAMS = \
 	bpt_verify \
 	sos_verify \
+	sos_restore \
 	ods_verify \
 	bpt_test \
 	sos \
@@ -125,6 +126,13 @@ liboidxinclude_HEADERS = oidx.h
 sos_verify_SOURCES = sos_verify.c
 sos_verify_CFLAGS = $(INCLUDES)
 sos_verify_LDADD = \
+		   libsos.la \
+		   libods.la \
+		   libobjidx.la
+
+sos_restore_SOURCES = sos_restore.c
+sos_restore_CFLAGS = $(INCLUDES)
+sos_restore_LDADD = \
 		   libsos.la \
 		   libods.la \
 		   libobjidx.la
