sos: sos_rotate functionality
This changeset add sos_rotate() functionality for store rotation, with
the following modification:

 - addressing index ODS file mode for sos_restore
 - updating sos_test to support sos_rotate
 - reducing SOS initial size and extend size to save space

Change-Id: I12f4126c1ac0980ca32e7daaf66dfbfe142f5558

--- a/sos/src/Makefile.am
+++ b/sos/src/Makefile.am
@@ -42,7 +42,8 @@ libsos_la_LIBADD = \
 	libods.la \
 	libobjidx.la \
 	liboidx.la \
-	-lcoll
+	-lcoll \
+	-lovis_util
 #libsos_la_DEPENDENCIES = \
 #	libsos.map \
 #	libods.la \
@@ -163,7 +164,8 @@ sos_LDADD = \
 	libobjidx.la \
 	liboidx.la \
 	libods.la \
-	-lcoll
+	-lcoll \
+	-lovis_util
 
 sos_test_SOURCES = sos_test.c
 sos_test_LDADD = \
