all: no softlinks for system files
Remove all softlinks for system files (e.g. /etc/init.d/*,
/etc/profile.d/*), and install actual files instead.

Change-Id: I5bf2e6b0ae42bff849000b1f969e42e0d87a0dc4

--- a/baler/etc/Makefile.am
+++ b/baler/etc/Makefile.am
@@ -1,4 +1,3 @@
 install-data-local:
-	$(MKDIR_P) $(DESTDIR)/$(prefix)/etc/init.d
-	$(INSTALL_SCRIPT) $(builddir)/init.d/balerd $(DESTDIR)/$(prefix)/etc/init.d/
-	$(LN_S) -f $(DESTDIR)/$(prefix)/etc/init.d/balerd /etc/init.d/
+	$(MKDIR_P) $(DESTDIR)/etc/init.d
+	$(INSTALL_SCRIPT) $(builddir)/init.d/balerd $(DESTDIR)/etc/init.d/
