--- a/me/etc/Makefile.am
+++ b/me/etc/Makefile.am
@@ -1,4 +1,3 @@
 install-data-local:
-	$(MKDIR_P) $(DESTDIR)/$(prefix)/etc/init.d
-	$(INSTALL_SCRIPT) $(builddir)/init.d/me $(DESTDIR)/$(prefix)/etc/init.d/
-	$(LN_S) -f $(DESTDIR)/$(prefix)/etc/init.d/me /etc/init.d/
+	$(MKDIR_P) $(DESTDIR)/etc/init.d
+	$(INSTALL_SCRIPT) $(builddir)/init.d/me $(DESTDIR)/etc/init.d/
