ovis: init scripts: Minor fixes
 - ldmsd_aggregator and ldmsd_sampler init scripts use the service name instead
   of the daemon name (ldmsd)
 - dostatus() is fixed to use either the service names or the program names
   instead of the full path of the program.

Change-Id: I8329c83379e197f29c05746dbaf6d734302e629a

--- a/komondor/etc/init.d/komondor.in
+++ b/komondor/etc/init.d/komondor.in
@@ -138,8 +138,7 @@ stop() {
 }
 
 dostatus() {
-	status $KOMONDOR
-	$STATUS -p $pidfile $KOMONDOR $KOMONDOR
+	$STATUS -p $pidfile $KOMONDOR $prog
 }
 
 restart() {
