--- a/ldms/etc/init.d/ldmsd_aggregator.in
+++ b/ldms/etc/init.d/ldmsd_aggregator.in
@@ -48,6 +48,7 @@ fi
 
 RETVAL=0
 prog="ldmsd"
+service="ldmsd_aggregator"
 LDMSD_AGG=$OVIS_HOME/sbin/ldmsd
 
 if [ -z $LDMSD_AGG_XPORT ] ; then
@@ -87,11 +88,11 @@ verify_sos() {
 }
 
 start() {
-	echo -n "Starting $prog: "
+	echo -n "Starting $service: "
 	# Check running instance
 	pid=`ps -C ldmsd -opid,cmd | grep ldmsd_aggregator | sed 's/ *\([0-9]\+\) .*/\1/'`
 	if [ $pid ] ; then
-		echo -n "ldmsd_aggregator is already running: "
+		echo -n "$service is already running: "
 		echo_failure
 		echo
 		exit 1
@@ -136,7 +137,7 @@ start() {
 }
 
 stop() {
-	echo -n "Stopping $prog: "
+	echo -n "Stopping $service: "
 	if [ -f $pidfile ]; then
 		pid=`cat $pidfile`
 	else
@@ -163,7 +164,7 @@ stop() {
 }
 
 dostatus() {
-	$STATUS -p $pidfile $LDMSD_AGG $LDMSD_AGG
+	$STATUS -p $pidfile $LDMSD_AGG $service
 }
 
 restart() {
