enh: configure for fsanitize

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -353,6 +353,9 @@ AC_CONFIG_FILES([Makefile src/Makefile src/core/Makefile src/xprt/Makefile
 		 scripts/ldms_local_usertest.sh
 		 scripts/ldms_local_valgrind.sh
 		 scripts/ldms_local_clocktest.sh
+		 scripts/ldms_local_inspxe.sh
+		 scripts/ldms_local_inspxe_rdma.sh
+		 scripts/ldms_local_rdmatest.sh
 		 ldms.spec],[
 		if test -f scripts/ldms_ban.sh.in; then chmod a+x scripts/ldms_ban.sh.in; fi
 		if test -f scripts/ldms_ctltest.sh; then chmod a+x scripts/ldms_ctltest.sh; fi
@@ -360,6 +363,9 @@ AC_CONFIG_FILES([Makefile src/Makefile src/core/Makefile src/xprt/Makefile
 		if test -f scripts/ldms_local_usertest.sh; then chmod a+x scripts/ldms_local_usertest.sh; fi
 		if test -f scripts/ldms_local_valgrind.sh; then chmod a+x scripts/ldms_local_valgrind.sh; fi
 		if test -f scripts/ldms_local_clocktest.sh; then chmod a+x scripts/ldms_local_clocktest.sh; fi
+		if test -f scripts/ldms_local_inspxe.sh ; then chmod a+x scripts/ldms_local_inspxe.sh; fi;
+		if test -f scripts/ldms_local_inspxe_rdma.sh ; then chmod a+x scripts/ldms_local_inspxe_rdma.sh; fi
+		if test -f scripts/ldms_local_rdmatest.sh; then chmod a+x scripts/ldms_local_rdmatest.sh; fi
 		])
 AC_OUTPUT
 
