--- a/ldms/scripts/Makefile.am
+++ b/ldms/scripts/Makefile.am
@@ -1,6 +1,14 @@
 
 # consider adding ldmsd to bin_SCRIPTS if ldmsd script ever stabilizes
-bin_SCRIPTS= envldms.sh ldms_local_clocktest.sh ldms_local_usertest.sh ldms_usertest.sh ldms_local_valgrind.sh
+bin_SCRIPTS= envldms.sh \
+	ldms_local_clocktest.sh \
+	ldms_local_usertest.sh \
+	ldms_usertest.sh \
+	ldms_local_valgrind.sh \
+	ldms_local_inspxe.sh \
+	ldms_local_inspxe_rdma.sh \
+	ldms_local_rdmatest.sh
+
 CLEANFILES = $(bin_SCRIPTS)
 
 bin_SCRIPTS+= ldms_ban.sh
